tests/success/stdout_redirect.msh
# FILE:hello_world.txt
[echo "Hello, world!"] `hello_world.txt` >;
