tests/fail/redirect_conflict_both_redirect.msh
# Conflict: &> then 2>&1 must error
[ls] `conflict_both.txt` &> 2>&1 ;
